--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,7 +15,7 @@
         "clear": true,
         // "echo": true,
         "panel": "shared",
-        "reveal": "always",
+        "reveal": "silent",
         "showReuseMessage": false,
         // "close": true,
       }
