--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,8 @@
       "name": "Debug Hot",
       "type": "cppvsdbg",
       "request": "launch",
-      "preLaunchTask": "Build hot-reload",
+      "preLaunchTask": "build_hot",
+      "postDebugTask": "cleanup_hot",
       "program": "${workspaceFolder}\\build\\arcadia_hot.exe",
       "args": ["${workspaceFolder}\\build\\game.dll"],
       "cwd": "${workspaceFolder}",
